# testloom

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docker/: Dockerfile  docker-compose.yml
docs/: index.html
docs/architecture/: adr-001-llm-gateway.md  adr-002-rag-pipeline.md
examples/: basic_generation.py
src/testloom/: __init__.py
src/testloom/cli/: main.py
src/testloom/core/: config.py  exceptions.py  models.py
src/testloom/formatters/: __init__.py
src/testloom/gateway/: base.py  litellm_provider.py  registry.py
src/testloom/generators/: base.py  rag_generator.py  requirement_generator.py
src/testloom/inputs/: __init__.py  processors.py
src/testloom/prompts/: engine.py
src/testloom/prompts/templates/: test_generation.yaml
src/testloom/store/: __init__.py  context_store.py
src/testloom/utils/: json_extract.py  logging.py
tests/: conftest.py  test_core.py  test_formatters_junit.py  test_generators.py  test_json_extract.py  test_rag_generator.py
