[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testloom"
version = "0.2.0"
description = "TestLoom — Weaving comprehensive test cases from the threads of your requirements. Open-source, LLM-agnostic AI test generation framework."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "TestLoom Contributors" },
]
keywords = [
    "testing", "ai", "test-generation", "llm", "quality-engineering",
    "langchain", "langgraph", "test-automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "click>=8.1",
    "rich>=13.0",
    "litellm>=1.40",
    "structlog>=24.0",
]

[project.optional-dependencies]
rag = [
    "langchain>=0.2",
    "langgraph>=0.2",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "pypdf>=4.0",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
all = ["testloom[rag,api,dev]"]

[project.scripts]
testloom = "testloom.cli.main:cli"

[project.urls]
Homepage = "https://github.com/saurabh-oss/testloom"
Documentation = "https://github.com/saurabh-oss/testloom/blob/main/docs/getting-started.md"
Repository = "https://github.com/saurabh-oss/testloom"
Issues = "https://github.com/saurabh-oss/testloom/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/testloom"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["testloom"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=testloom --cov-report=term-missing"
